@@ -12,6 +12,7 @@ Version 1.1.1 to be released
 - Bug #865: CWidgetFactory didn't set the owner of the newly created widgets correctly (Qiang)
 - Bug #869: CDateFormatter::formatTimeZone() may report error for certain locale data (Qiang)
 - Bug #871: A module generated by the yiic module command did not use the application layout by default (Qiang)
+- Bug #890: The 'alias' option set in default scope was ignored when performing an eager relational query (Qiang)
 - Bug #932: CLocale::getWeekDayName() causes PHP error when requesting 'narrow' format data (Qiang)
 - Bug #947: CTabView does not target tab links correctly when extra elements are put in the header (Qiang)
 - Bug #957: CGettextPoFile should allow optional msgctxt (Qiang)
